<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VCheck</string>
    <string name="CIN">Enter CIN</string>
    <string name="full_name">Full Name: </string>
    <string name="id">ID Document: </string>
    <string name="age">Age: </string>
    <string name="fill">NULL</string>
    <string name="vaccine_info">Vaccine Info</string>
    <string name="hospital">Hospital: </string>
    <string name="vaccine_type">Vaccine Type: </string>
    <string name="vaccine_number">Vaccine N°:</string>
    <string name="user_info">User Info</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="welcome">Welcome</string>
    <string name="text">To your safety place</string>
    <string name="scan">Scan</string>
    <string name="cin_req">Enter your CIN </string>
    <string name="cin">CIN </string>
    <string name="submit">Submit</string>
    <string name="acceuil">acceuil</string>
    <string name="quitter">Quitter</string>
    <string name="todo">TODO</string>
    <string name="error">The person is not vaccinated yet</string>

</resources>