<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.VaccineInfoActivity">

        <TextView
            android:id="@+id/vaccineinfotext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:layout_marginBottom="20dp"
            android:text="@string/user_info"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/person_info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/super_green_light"
            android:paddingBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vaccineinfotext2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_person_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingTop="24dp"
                android:paddingEnd="16dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:shadowColor="@color/white"
                    android:text="@string/full_name"
                    android:textAlignment="gravity"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/brown"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="serif"
                    android:text="@string/fill"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/name"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/document_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="serif"
                    android:shadowColor="@color/white"
                    android:text="@string/id"
                    android:textAlignment="gravity"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/labelID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="serif"
                    android:text="@string/fill"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/document_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/document_id"
                    app:layout_constraintTop_toTopOf="@+id/document_id" />

                <TextView
                    android:id="@+id/agetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="serif"
                    android:text="@string/age"
                    android:textAlignment="gravity"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/document_id" />

                <TextView
                    android:id="@+id/labelAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="serif"
                    android:text="@string/fill"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/agetext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/agetext"
                    app:layout_constraintTop_toTopOf="@+id/agetext" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/vaccineinfotext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/vaccine_info"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_info_card" />

        <androidx.cardview.widget.CardView
            android:id="@+id/vaccine_info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/super_green_light"
            android:paddingBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vaccineinfotext">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_vaccine_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingTop="24dp"
                android:paddingEnd="16dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/hospital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:capitalize="none"
                    android:fontFamily="serif"
                    android:shadowColor="@color/white"
                    android:text="@string/hospital"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/brown"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelHospital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="serif"
                    android:text="@string/fill"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/hospital"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/vaccine_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="serif"
                    android:shadowColor="@color/white"
                    android:text="@string/vaccine_type"
                    android:textAlignment="gravity"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hospital" />

                <TextView
                    android:id="@+id/labelTypeVacc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="serif"
                    android:text="@string/fill"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/vaccine_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/vaccine_type"
                    app:layout_constraintTop_toTopOf="@+id/vaccine_type" />

                <TextView
                    android:id="@+id/vaccine_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="serif"
                    android:text="@string/vaccine_number"
                    android:textAlignment="gravity"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vaccine_type" />

                <TextView
                    android:id="@+id/labelNbrVacc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="serif"
                    android:text="@string/fill"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/vaccine_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/vaccine_number"
                    app:layout_constraintTop_toTopOf="@+id/vaccine_number" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>